syntax = "proto3";

package tests.lint;

import "patch/go.proto";

option go_package = "github.com/alta/protopatch/tests/lint";

option (go.lint) = true;

enum Protocol {
	// PROTOCOL_INVALID value should lint to ProtocolInvalid.
	PROTOCOL_INVALID = 0;
	// PROTOCOL_IP value should lint to ProtocolIP.
	PROTOCOL_IP = 1;
	// PROTOCOL_UDP value should lint to ProtocolUDP.
	PROTOCOL_UDP = 2;
	// PROTOCOL_TCP value should lint to ProtocolTCP.
	PROTOCOL_TCP = 3;
}

// Url message type should lint to URL.
message Url {}

// Id message type should lint to ID.
message Id {}

message OneofMessage {
	oneof contents {
		// Id oneof should lint to ID.
		Id id = 1;
		// Url oneof should lint to URL.
		Url url = 2;
	};
}

message OuterMessage {
	// InnerId message should lint to InnerID.
	message InnerId {}
	// InnerId message should lint to InnerURL.
	message InnerUrl {}
	// id field should lint to ID.
	InnerId id = 1;
	// url field should lint to URL.
	InnerUrl url = 2;
}
